--- a/src/components/Form/style.css
+++ b/src/components/Form/style.css
@@ -64,6 +64,11 @@
   background-color: var(--grey-1);
   border-radius: 0.5rem;
 }
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 .divValueLeft > input::placeholder {
   text-align: right;
   padding-right: 0.6875rem;
