--- a/src/components/Form/style.css
+++ b/src/components/Form/style.css
@@ -12,6 +12,8 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  
+  animation: fadeInLeftBig 1s;
 }
 .divDescription {
   display: flex;
@@ -91,4 +93,9 @@ input[type="number"]::-webkit-outer-spin-button {
 
   font-size: 1rem;
   font-weight: 500;
+}
+.contentForm button:hover {
+  background-color: var(--color-primary-2);
+  
+  animation: pulse 1s;
 }
