--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -8,12 +8,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  animation: fadeInDown 2.5s;
 }
 .header div {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 64%;
+}
+.header img:hover{
+  animation: hinge 1s;
 }
 .header button {
   height: 2.5rem;
@@ -24,4 +29,7 @@
 
   background-color: var(--grey-2);
   color: var(--grey-4);
+}
+.header button:hover {
+  animation: pulse 1s;
 }
