--- a/src/components/List/style.css
+++ b/src/components/List/style.css
@@ -23,6 +23,8 @@
   height: auto;
 
   margin-bottom: 1.25rem;
+
+  animation: fadeInUp 0.5s;
 }
 .menuNav nav {
   width: 100%;
@@ -40,6 +42,7 @@
   background-color: var(--grey-2);
   color: var(--grey-4);
 }
+
 .menuNav button:focus {
   background-color: var(--color-primary);
   color: var(--grey-1);
@@ -47,6 +50,15 @@
   width: 4.3125rem;
 
   transition: all ease-in-out 1s;
+}
+.button1 {
+  animation: fadeInUp 1s;
+}
+.button2 {
+  animation: fadeInUp 2s;
+}
+.button3 {
+  animation: fadeInUp 3s;
 }
 .contentList {
   overflow-y: auto;
@@ -60,6 +72,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+
 }
 
 .contentList::-webkit-scrollbar {
